# cppmus

./: CMakeLists.txt  Makefile
include/: AudioInput.hpp  AudioOutput.hpp  Buffer.hpp  BufferInfo.hpp  BufferInput.hpp  BufferIterator.hpp  BufferOutput.hpp  Context.hpp  FrameInfo.hpp  Input.hpp  Module.hpp  Output.hpp  PlaybackContext.hpp  play.hpp  types.hpp
include/functions/: ControlFunction.hpp  WaveFunction.hpp  waveFunctions.hpp
include/modules/: AmplifierModule.hpp  ControlFunctionModule.hpp  DelayModule.hpp  FixedOscModule.hpp  FixedWaveFunctionLFOModule.hpp  FixedWaveFunctionOscModule.hpp  MixerModule.hpp  OscModule.hpp
src/: AudioInput.cpp  AudioOutput.cpp  BufferInfo.cpp  BufferIterator.cpp  CMakeLists.txt  Context.cpp  Input.cpp  Module.cpp  PlaybackContext.cpp  main.cpp  play.cpp
src/cppmus/include/: FrameInfo.hpp
src/modules/: AmplifierModule.cpp  ControlFunctionModule.cpp  DelayModule.cpp  FixedOscModule.cpp  FixedWaveFunctionLFOModule.cpp  FixedWaveFunctionOscModule.cpp  MixerModule.cpp  OscModule.cpp  waveFunctions.cpp
